--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,8 @@
   filter: blur(55px);
   background: radial-gradient(
     50% 50% at 50% 50%,
-    rgb(255, 152, 49),
-    rgb(254, 51, 10)
+    #2D90EF,
+    #0268E3
   );
 }
 
@@ -33,8 +33,9 @@
   filter: blur(55px);
   background: radial-gradient(
     50% 50% at 50% 50%,
-    rgb(254, 51, 10),
-    rgb(255, 152, 49)
+    #0268E3
+    #2D90EF,
+
   );
 }
 .button-slide {
